--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "gh-pages": "^5.0.0",
     "vite": "^4.4.0"
   },
-  "homepage": "https://faizan-waien.github.io/"
+  "homepage": "https://faizan-waien.github.io/#"
 
 
 
