--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-
     "predeploy": "npm run build",
     "deploy": "gh-pages -b gh-pages -d dist"
   },
@@ -28,8 +27,5 @@
     "gh-pages": "^5.0.0",
     "vite": "^4.4.0"
   },
-  "homepage": "https://faizan-waien.github.io/#"
-
-
-
+  "homepage": "https://faizan-waien.github.io/portfolio/#"
 }
