--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "gh-pages": "^5.0.0",
     "vite": "^4.4.0"
   },
-  "homepage": "https://faizan-waien.github.io/portfolio/#"
+  "homepage": "https://faizan-waien.github.io/Portfolio/#"
 }
