--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://faizan-waien.github.io/portfolio/#",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -26,6 +27,5 @@
     "eslint-plugin-react-refresh": "^0.4.1",
     "gh-pages": "^5.0.0",
     "vite": "^4.4.0"
-  },
-  "homepage": "https://faizan-waien.github.io/Portfolio/#"
+  }
 }
